--- a/HtmlCss/kindergarten_website_template/navbar.html
+++ b/HtmlCss/kindergarten_website_template/navbar.html
@@ -133,7 +133,7 @@
             <div class="row">
                 <div class="col-md-6">
                     <div style="padding: 15px;">
-                        <img src="../Template/kindergarten-website-template/img/about-1.jpg" alt="">
+                        <img class="img-fluid rounded mb-5 mb-lg-0" src="../Template/kindergarten-website-template/img/about-1.jpg" alt="">
 
                     </div>
 
@@ -153,7 +153,7 @@
                         <div class="row">
                             <div class="col-5">
                                 <div>
-                                    <img src="../Template/kindergarten-website-template/img/about-2.jpg">
+                                    <img class="img-fluid rounded" src="../Template/kindergarten-website-template/img/about-2.jpg">
                                 </div>
                             </div>
                             <div class="col-7">
